# grutils

./: .gitignore  README.md  file_cache.json  pyproject.toml  requirements-dev.txt  tag_cache.txt
src/grutils/: __init__.py  autotag.py  calculus.py  curves.py
src/grutils/latex/: convert.py  tex2md.py
src/grutils/latex/handlers/: __init__.py  equations.py  figures.py  lists.py  misc.py  multicols.py  theorems.py
src/grutils/plotting/: __init__.py  arrow.py  complex_plot.py  error_band.py  lines.py
